[package]
name = "cabr2_search"
version = "0.4.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
cabr2_types = { path = "../cabr2_types/" }
cfg-if = "1.0.0"
chrono = "0.4.19"
futures = { version = "0.3.19", optional = true }
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json", "native-tls"], default-features = false, optional = true }
roxmltree = { version = "0.14.1", optional = true }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
structopt = { version = "0.3.25", optional = true }
tauri = { version = "1.0.0-beta.8", default-features = false, optional = true }
thiserror = "1.0.29"
tokio = { version = "1.15.0", features = ["sync"], default-features = false, optional = true }
warp = { version = "0.3.2", optional = true }

[features]
gestis = [ "roxmltree", "reqwest" ]
gestis_helper = [ "gestis" ]
tauri_plugin = [ "tauri", "tokio" ]
webserver = [ "warp", "tokio", "cabr2_types/webserver" ]
wasm = [ "chrono/wasmbind" ]
default = []

[[bin]]
name = "gestis_helper"
path = "contrib/gestis/helper.rs"
required-features = [ "structopt", "gestis_helper" ]
