[package]
name = "cabr2_wasm_lib"
version = "0.4.1"
authors = [
  "crapStone <crapstone01@gmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
cabr2_load_save = { path = "../src-tauri/cabr2_load_save/", features = ["wasm"] }
cabr2_search = { path = "../src-tauri/cabr2_search/", features = ["wasm"] }
cabr2_types = { path = "../src-tauri/cabr2_types/" }
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.14"
serde = "1.0.133"
serde_json = "1.0.74"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"

[features]
default = ["cabr2_load_save/beryllium", "cabr2_search/gestis"]
debug_build = ["console_error_panic_hook"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
