[package]
name = "cabr2_wasm_lib"
version = "0.4.1"
edition = "2018"
description = 'Wasm implementation for CaBr2.'
authors = [
  "crapStone <crapstone01@gmail.com>",
]
license = "GPLv3+"
repository = "https://github.com/Calciumdibromid/CaBr2/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "0.2.0", features = ["color"] }
load_save = { path = "../../crates/load_save/" }
log = "0.4.14"
search = { path = "../../crates/search/" }
serde = "1.0.133"
serde_json = "1.0.74"
types = { path = "../../crates/types/" }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"

[features]
default = ["load_save/beryllium", "search/gestis"]
debug_build = ["console_error_panic_hook"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
